fix: adjust scrollbar width for improved usability

--- a/frontend/app/styles/base/scrollbar.scss
+++ b/frontend/app/styles/base/scrollbar.scss
@@ -3,7 +3,7 @@
 }
 
 ::-webkit-scrollbar {
-	width: 4px;
+	width: 5px;
 	height: 98%;
 	background: transparent;
 }
